leptos_macro/tests/view/56_generic_clone_and_fn_wrong_type.stderr
error[E0277]: `bool` is not a valid type for prop `fun` on component `Inner`
  --> tests/view/56_generic_clone_and_fn_wrong_type.rs:13:24
   |
13 |             <Inner fun=true/>
   |                        ^^^^ the trait `Fn()` is not implemented for `bool`
   |
   = note: required: `Clone + Fn() -> bool`
note: required for `bool` to implement `__Check_fun`
  --> tests/view/56_generic_clone_and_fn_wrong_type.rs:18:1
   |
18 | #[component]
   | ^^^^^^^^^^^^
...
21 |     F: Clone + Fn() -> bool,
   |                ------------ unsatisfied trait bound introduced here
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__pass_fun` exists for type `bool`, but its trait bounds were not satisfied
  --> tests/view/56_generic_clone_and_fn_wrong_type.rs:13:24
   |
13 |             <Inner fun=true/>
   |                        ^^^^
   |
note: the following trait bounds were not satisfied:
      `&bool: Fn<()>`
      `&mut bool: Clone`
      `&mut bool: Fn<()>`
      `<&bool as FnOnce<()>>::Output = bool`
      `<&mut bool as FnOnce<()>>::Output = bool`
      `<bool as FnOnce<()>>::Output = bool`
      `bool: Fn<()>`
  --> tests/view/56_generic_clone_and_fn_wrong_type.rs:21:8
   |
18 | #[component]
   | ------------
...
21 |     F: Clone + Fn() -> bool,
   |        ^^^^^   ^^^^^^^^^^^^
   |        |       |       |
   |        |       |       unsatisfied trait bound introduced here
   |        |       unsatisfied trait bound introduced here
   |        unsatisfied trait bound introduced here
   = help: items from traits can only be used if the trait is implemented and in scope
note: `__Check_fun` defines an item `__pass_fun`, perhaps you need to implement it
  --> tests/view/56_generic_clone_and_fn_wrong_type.rs:18:1
   |
18 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
